--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <h1>AIRBNB</h1>
+  <p>Des hotels séléctionnés avec soin</p>
+</div>
+<%= link_to "Voir tous les hôtels", homes_path, class: "btn btn-flat", style: "margin-bottom: 20px; margin-top: 20px;" %> <br>
+<%= link_to "Page À propos & Contacts", about_path, style: "color: black;" %>
