--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,4 @@
 </div>
 <%= link_to "Voir tous les hôtels", homes_path, class: "btn btn-flat", style: "margin-bottom: 20px; margin-top: 20px;" %> <br>
 <%= link_to "Page À propos & Contacts", about_path, style: "color: black;" %>
+<%= link_to "Profil", user_path(current_user.id), style: "color: black;" %>
